--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "author": "Dudu Code",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/datastore": "^6.4.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
